<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelIp" />

    <EditText
        android:id="@+id/editTextIp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/textViewPorta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPorta" />

    <EditText
        android:id="@+id/editTextPorta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/botaoConectar" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars = "vertical"
        android:text="@string/vazio" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayoutSend" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelMensagem" />

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <Button
            android:id="@+id/buttonSendMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botaoSendMsg" />

        <Button
            android:id="@+id/buttonDisconnet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/botaoDisconnect" />

    </LinearLayout>

</LinearLayout>